<resources>
    <string name="app_name">Course Project</string>
    <string name="name">Login</string>
    <string name="password">Password</string>
    <string name="login_hint">Enter a username</string>
    <string name="LoginButton">Login</string>

    <string name="errmessageLogin">Invalid login. please try again.</string>
    <string name="errmessagePassword">Invalid Password. Please Try again</string>
    <string name="LoginHint">Username</string>
    <string name="loginPassword">Password</string>
</resources>
