<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/PasswordLabel"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="296dp" android:layout_marginRight="296dp" android:textSize="24sp"
            tools:text="@string/password" app:layout_constraintTop_toBottomOf="@+id/LoginLabel"
            android:layout_marginTop="36dp" android:text="@string/password"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/LoginLabel"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="68dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" tools:text="@string/name"
            android:textSize="24sp" android:text="@string/name"/>
    <EditText
            android:layout_width="216dp"
            android:layout_height="57dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/Login"
            app:layout_constraintStart_toEndOf="@+id/LoginLabel"
            tools:text="@string/login_hint" android:layout_marginLeft="16dp" android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
            android:layout_marginTop="56dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.423" android:selectAllOnFocus="true"
            android:hint="@string/LoginHint" android:singleLine="false"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/Password"
            app:layout_constraintStart_toEndOf="@+id/PasswordLabel" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/Login" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
            app:layout_constraintHorizontal_bias="0.059" android:hint="@string/loginPassword"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/LoginBtn" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/Password" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" tools:text="@string/LoginButton"
            android:text="@string/LoginButton"/>
    <ImageView
            android:layout_width="361dp"
            android:layout_height="103dp" app:srcCompat="@drawable/mcc_logo"
            android:id="@+id/imageView" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:layout_marginTop="336dp"
            app:layout_constraintTop_toBottomOf="@+id/LoginBtn" app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/app_name" app:layout_constraintVertical_bias="1.0"
            app:layout_constraintHorizontal_bias="0.764"/>
</androidx.constraintlayout.widget.ConstraintLayout>